RESOLVED FIXED223720
Have App Highlights be a Configuration Setting instead of an internal Preference setting.
https://bugs.webkit.org/show_bug.cgi?id=223720
Summary Have App Highlights be a Configuration Setting instead of an internal Prefere...
Megan Gardner
Reported 2021-03-24 17:09:28 PDT
Have App Highlights be a Configuration Setting instead of an internal Perferance setting.
Attachments
Patch (11.65 KB, patch)
2021-03-24 17:30 PDT, Megan Gardner
no flags
Patch (11.46 KB, patch)
2021-03-24 17:40 PDT, Megan Gardner
no flags
Patch (11.45 KB, patch)
2021-03-25 21:11 PDT, Megan Gardner
no flags
Patch for landing (11.45 KB, patch)
2021-03-25 21:29 PDT, Megan Gardner
no flags
Megan Gardner
Comment 1 2021-03-24 17:30:17 PDT
Megan Gardner
Comment 2 2021-03-24 17:40:34 PDT
Tim Horton
Comment 3 2021-03-24 17:53:27 PDT
Comment on attachment 424207 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=424207&action=review > Source/WTF/Scripts/Preferences/WebPreferences.yaml:258 > + exposed: [ WebKit ] I don't... actually know what `exposed` means here. None of the neighbors have it? May Sam can explain.
Megan Gardner
Comment 4 2021-03-25 21:11:32 PDT
Megan Gardner
Comment 5 2021-03-25 21:29:04 PDT
Created attachment 424316 [details] Patch for landing
EWS
Comment 6 2021-03-25 22:09:29 PDT
Committed r275077: <https://commits.webkit.org/r275077> All reviewed patches have been landed. Closing bug and clearing flags on attachment 424316 [details].
Radar WebKit Bug Importer
Comment 7 2021-03-25 22:11:30 PDT
Note You need to log in before you can comment on or make changes to this bug.