Source/WebKit/Shared/WebPreferencesDefaultValues.cpp
@@ -129,16 +129,6 @@ bool defaultAsyncOverflowScrollingEnabled()
     return defaultAsyncFrameAndOverflowScrollingEnabled();
 }
 
-#if ENABLE(APP_HIGHLIGHTS)
-bool defaultAppHighlightsEnabled()
-{
-#if HAVE(SYSTEM_FEATURE_FLAGS)
-    return isFeatureFlagEnabled("app_highlights");
-#endif
-    return false;
-}
-#endif
-
 #if ENABLE(GPU_PROCESS)
 
 bool defaultUseGPUProcessForCanvasRenderingEnabled()
